--- a/products.html
+++ b/products.html
@@ -1,4 +1,3 @@
-<!-- templates/products.html -->
 <!doctype html>
 <html>
 
@@ -6,25 +5,52 @@
     <meta charset="utf-8">
     <title>Grocerz - Products</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <style>
+        /* small inline styles to ensure buttons look OK if you don't have style.css */
+        table {
+            border-collapse: collapse;
+            margin-top: 12px;
+        }
+
+        th,
+        td {
+            border: 1px solid #bbb;
+            padding: 8px 10px;
+            text-align: left;
+        }
+
+        input[type=number] {
+            width: 64px;
+            padding: 6px;
+        }
+
+        button {
+            padding: 6px 10px;
+        }
+    </style>
 </head>
 
 <body>
-    <header>
+    <header style="display:flex; align-items:center; gap:18px;">
         <h1>Grocerz</h1>
         <nav>
-            <a href="/">Home</a>
-            <a href="/products">Products</a>
+            <a href="/">Home</a> |
+            <a href="/products">Products</a> |
+            <a href="{{ url_for('shopping_list') }}">Shopping List</a> |
+            <a href="{{ url_for('store_map') }}">Map</a>
         </nav>
     </header>
 
     <main>
         <h2>Products</h2>
 
-        <form method="get" action="/products" style="margin-bottom:16px;">
-            <input type="text" name="q" placeholder="Search name or SKU" value="{{ q }}">
-            <input type="text" name="brand" placeholder="Filter brand" value="{{ brand }}">
+        <form method="get" action="{{ url_for('products') }}" style="margin-bottom:12px;">
+            <input type="text" name="q" placeholder="search" value="{{ q }}">
+            <input type="text" name="brand" placeholder="brand" value="{{ brand }}">
             <button type="submit">Search</button>
         </form>
+
+        <p>Found: {{ products|length }} products</p>
 
         <table>
             <thead>
@@ -32,10 +58,10 @@
                     <th>SKU</th>
                     <th>Name</th>
                     <th>Brand</th>
-                    <th>Size</th>
                     <th>Price</th>
-                    <th>Availability</th>
+                    <th>Stock</th>
                     <th>Aisle</th>
+                    <th>Add to list</th> <!-- NEW column -->
                 </tr>
             </thead>
             <tbody>
@@ -44,14 +70,29 @@
                     <td>{{ p.sku }}</td>
                     <td>{{ p.name }}</td>
                     <td>{{ p.brand }}</td>
-                    <td>{{ p.size }}</td>
                     <td>₹{{ '%.2f'|format(p.price) }}</td>
                     <td>{{ p.availability }}</td>
                     <td>{{ p.aisle }}</td>
+
+                    <!-- add-to-list form -->
+                    <td>
+                        {% if p.stock_qty and p.stock_qty > 0 %}
+                        <form action="{{ url_for('add_to_list') }}" method="post"
+                            style="display:flex; gap:6px; align-items:center;">
+                            <input type="hidden" name="sku" value="{{ p.sku }}">
+                            <input type="number" name="qty" value="1" min="1" max="{{ p.stock_qty }}">
+                            <button type="submit">Add to list</button>
+                        </form>
+                        {% else %}
+                        <span style="color:#c43b2a; font-weight:700;">Out of stock</span>
+                        {% endif %}
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+
+        <p style="margin-top:16px;"><a href="{{ url_for('shopping_list') }}">Go to your Shopping List →</a></p>
     </main>
 </body>
 
