--- a/products.html
+++ b/products.html
@@ -50,6 +50,13 @@
             <button type="submit">Search</button>
         </form>
 
+       
+        <p>
+            <a class="btn" href="{{ url_for('show_qr') }}">Show site QR</a>
+            
+            </p>
+
+
         <p>Found: {{ products|length }} products</p>
 
         <table>
