--- a/base.html
+++ b/base.html
@@ -1,100 +1,50 @@
 <!doctype html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Grocerz</title>
-    <link rel="stylesheet" href="/static/css/style.css">
-    <style>
-        /* fallback minimal styles if you don't have style.css yet */
-        body {
-            font-family: Arial, sans-serif;
-            padding: 18px;
-            background: #fafafa;
-            color: #111;
-        }
-
-        header {
-            display: flex;
-            align-items: center;
-            gap: 18px;
-            margin-bottom: 18px;
-        }
-
-        nav a {
-            margin-right: 10px;
-            text-decoration: none;
-            color: #333;
-        }
-
-        .flash {
-            background: #e6ffef;
-            border: 1px solid #c8f7d2;
-            padding: 8px 10px;
-            border-radius: 6px;
-            margin-bottom: 12px;
-        }
-
-        .page {
-            max-width: 1100px;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th,
-        td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background: #f6f6f8;
-        }
-
-        .btn {
-            padding: 6px 10px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
-            background: #fff;
-            cursor: pointer;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Grocerz — Smart Inventory</title>
+  <!-- IMPORTANT: make sure this path matches your static folder -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-
 <body>
-    <header>
-        <h1 style="margin:0; color:#6b21a8;">Grocerz</h1>
-        <nav>
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('products') }}">Products</a>
-            <a href="{{ url_for('shopping_list') }}">Shopping List{% set sl = session.get('shopping_list', {}) %}{% if
-                sl and sl|length > 0 %} ({{ sl|length }}){% endif %}</a>
-            <a href="{{ url_for('store_map') }}">Map</a>
-            <a href="{{ url_for('show_qr') }}">Show QR</a>
+  <div class="container">
+    <header class="site-header">
+      <a class="logo" href="{{ url_for('index') }}">
+        <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden>
+          <defs><linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
+            <stop offset="0" stop-color="#79b86a"/><stop offset="1" stop-color="#3d6e35"/>
+          </linearGradient></defs>
+          <circle cx="32" cy="32" r="30" fill="url(#g)" opacity="0.12"/>
+          <path d="M10 38c8-8 18-12 28-11 0 0-8 12-18 20 0 0-6-7-10-9z" fill="#3d6e35"/>
+          <path d="M42 12c6 6 4 22-10 28 0 0 1-13 10-28z" fill="#79b86a"/>
+        </svg>
+        <div>
+          <h1>Grocerz</h1>
+          <p>Smart inventory & aisle guide</p>
+        </div>
+      </a>
 
-        </nav>
-        <div style="margin-left:auto; font-weight:600;">Coins: {{ session.get('coins', 0) }}</div>
+      <nav class="nav">
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('products') }}">Products</a>
+        <a href="{{ url_for('shopping_list') }}">Shopping List</a>
+        <a href="{{ url_for('store_map') }}">Map</a>
+        <a href="{{ url_for('show_qr') }}">QR</a>
+      </nav>
+
+      <div class="header-extra">
+        <div class="badge">Coins: {{ session.get('coins', 0) }}</div>
+      </div>
     </header>
 
-    <div class="page">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <div class="flash">
-            {% for m in messages %}
-            <div>{{ m }}</div>
-            {% endfor %}
-        </div>
-        {% endif %}
-        {% endwith %}
+    <main>
+      {% block content %}{% endblock %}
+    </main>
 
-        {% block content %}
-        <!-- page-specific content goes here -->
-        {% endblock %}
-    </div>
+    <footer class="site-footer">
+      © Grocerz — Smart Inventory Manager
+    </footer>
+  </div>
 </body>
-
 </html>
