--- a/map.html
+++ b/map.html
@@ -1,37 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="page">
-    <h2>Store Map</h2>
-    <p>Highlighted aisle: <strong>{{ highlight or "none" }}</strong></p>
+<div class="container" style="margin-top:18px">
+  <h2 class="page-title">Store Map</h2>
 
-    <div class="map-grid" style="display:flex; gap:12px; flex-wrap:wrap; max-width:900px;">
-        <!-- Example aisles (replace or expand) -->
-        {% set aisles = ["Aisle 1","Aisle 2","Aisle 3","Aisle 4","Aisle 5","Aisle 6","Aisle 7","Aisle 8","Aisle
-        9","Aisle 10","Freezer","Produce"] %}
-        {% for a in aisles %}
-        {% set cls = "aisle-box" %}
-        {% if highlight and highlight == a %}
-        {% set cls = cls + " aisle-highlight" %}
-        {% endif %}
-        <div class="{{ cls }}"
-            style="padding:18px 22px; border-radius:10px; border:1px solid #ddd; min-width:120px; text-align:center;">
-            <div style="font-weight:700;">{{ a }}</div>
-            <div style="font-size:13px; color:#555;">(tap to view)</div>
-            <div style="margin-top:8px;">
-                <a href="{{ url_for('products') }}?q=&brand=&aisle={{ a | urlencode }}">Search items</a>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
+  <p style="color:#5b6f57">Aisles with items in your list are highlighted.</p>
 
-    <p style="margin-top:14px;"><a href="{{ url_for('shopping_list') }}">← Back to shopping list</a></p>
+  <div class="map-grid" style="margin-top:12px">
+    {% for i in range(1,13) %}
+      {% set label = "Aisle " ~ i %}
+      <div class="aisle {% if label in highlighted %}highlight{% endif %}">{{ label }}</div>
+    {% endfor %}
+  </div>
+
+  <p style="margin-top:12px;color:#6b7c66">Follow the highlighted aisles to pick your items faster.</p>
 </div>
-
-<style>
-    .aisle-highlight {
-        background: linear-gradient(90deg, #fff7ed, #fff0d1);
-        border: 2px solid #f59e0b;
-        box-shadow: 0 6px 18px rgba(245, 158, 11, 0.12);
-    }
-</style>
 {% endblock %}
