--- a/base.html
+++ b/base.html
@@ -10,15 +10,9 @@
 <body>
   <div class="container">
     <header class="site-header">
-      <a class="logo" href="{{ url_for('index') }}">
-        <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden>
-          <defs><linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
-            <stop offset="0" stop-color="#79b86a"/><stop offset="1" stop-color="#3d6e35"/>
-          </linearGradient></defs>
-          <circle cx="32" cy="32" r="30" fill="url(#g)" opacity="0.12"/>
-          <path d="M10 38c8-8 18-12 28-11 0 0-8 12-18 20 0 0-6-7-10-9z" fill="#3d6e35"/>
-          <path d="M42 12c6 6 4 22-10 28 0 0 1-13 10-28z" fill="#79b86a"/>
-        </svg>
+       <a class="logo" href="{{ url_for('index') }}">
+    <img src="{{ url_for('static', filename='images/logo.jpg') }}" class="logo-img" alt="Grocerz Logo">
+</a>
         <div>
           <h1>Grocerz</h1>
           <p>Smart inventory & aisle guide</p>
@@ -48,3 +42,4 @@
   </div>
 </body>
 </html>
+
