--- a/map.html
+++ b/map.html
@@ -3,15 +3,31 @@
 <div class="container" style="margin-top:18px">
   <h2 class="page-title">Store Map</h2>
 
-  <p style="color:#5b6f57">Aisles with items in your list are highlighted.</p>
+  <p style="color:#5b6f57">
+    Aisles with items in your list are highlighted.
+  </p>
 
+  <!-- 🔹 Store blueprint image -->
+  <div class="store-map-wrapper">
+    <img
+      src="{{ url_for('static', filename='images/store_map.png') }}"
+      alt="Store Blueprint"
+      class="store-blueprint"
+    >
+  </div>
+
+  <!-- 🔹 Simple aisle grid with highlighting -->
   <div class="map-grid" style="margin-top:12px">
-    {% for i in range(1,13) %}
+    {% for i in range(1, 13) %}
       {% set label = "Aisle " ~ i %}
-      <div class="aisle {% if label in highlighted %}highlight{% endif %}">{{ label }}</div>
+      <div class="aisle {% if label in highlighted %}highlight{% endif %}">
+        {{ label }}
+      </div>
     {% endfor %}
   </div>
 
-  <p style="margin-top:12px;color:#6b7c66">Follow the highlighted aisles to pick your items faster.</p>
+  <p style="margin-top:12px;color:#6b7c66">
+    Follow the highlighted aisles to pick your items faster.
+  </p>
 </div>
 {% endblock %}
